# TinyJni

./: .gitmodules  .travis.yml  CMakeLists.txt  README.md  TJPch.cpp  TJPch.h
Android/jni/: Android.mk  Application.mk
Include/: TJClass.h  TJCommon.h  TJException.h  TJJavaException.h  TJObjectRef.h  TJPrimitiveArray.h  TJRef.h  TJString.h  TJTypeTraits.h  TJTypes.h  TJUtils.h  TJValue.h
Sources/: TJClass.cpp  TJCommon.cpp  TJException.cpp  TJJavaException.cpp  TJObjectRef.cpp  TJPrimitiveArray.cpp  TJString.cpp  TJTypeTraits.cpp  TJValue.cpp
Test/: CMakeLists.txt
Test/Android/jni/: Android.mk
Test/Include/: TJClassTest.h  TJClassTestDouble.h  TJJavaVMInitializer.h  TJStringTest.h
Test/Src/: Main.cpp  TJClassTest.cpp  TJJavaVMInitializer.cpp  TJStringTest.cpp  TJThreadTest.cpp  TinyJniTest.cpp
Test/Src/Linux/: TJJavaVMInitializer.cpp
Test/Src/MacOs/: TJJavaVMInitializer.cpp
Test/Src/Win32/: TJJavaVMInitializer.cpp
Test/Windows/: TJPrimitiveArrayTest.cpp
